--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@angular/platform-browser": "16.1.3",
     "@angular/platform-browser-dynamic": "16.1.3",
     "@angular/router": "16.1.3",
+    "@types/web-bluetooth": "0.0.19",
     "rxjs": "7.8.1",
     "tslib": "^2.5.0",
     "zone.js": "~0.13.1"
