--- a/package.json
+++ b/package.json
@@ -45,11 +45,14 @@
     "lint": "ng lint"
   },
   "dependencies": {
+    "@angular/animations": "16.2.12",
+    "@angular/cdk": "16.2.11",
     "@angular/common": "16.2.12",
     "@angular/compiler": "16.2.12",
     "@angular/core": "16.2.12",
     "@angular/forms": "16.2.12",
     "@angular/language-service": "16.2.12",
+    "@angular/material": "16.2.11",
     "@angular/platform-browser": "16.2.12",
     "@angular/platform-browser-dynamic": "16.2.12",
     "@angular/router": "16.2.12",
